--- a/huddle-landing-page/styles.css
+++ b/huddle-landing-page/styles.css
@@ -15,6 +15,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1440px;
+    height: auto;
 }
 
 header {
@@ -111,7 +113,6 @@ footer ul {
     gap: 1.5rem;
     list-style: none;
     padding: 0;
-    margin: 0 5rem;
 }
 footer ul li {
     display: inline;
